# photo_sorter

./: .gitignore  PhotoSorter.spec  PhotoSorter_Windows.spec  README.md  build_dist.sh  icon.icns  install_and_run.bat  install_and_run.sh  photo_sorter.py  photo_sorter_local.py  photo_sorter_ui.py  pyproject.toml  requirements.txt  requirements_local.txt  version_info.txt
.github/workflows/: build.yml
